bridges/jac-bridge/tests/ui/unknown_jac_key.stderr
error: unknown #[jac(...)] key: expected owned, borrowed, or assoc
  --> tests/ui/unknown_jac_key.rs:16:15
   |
16 |         #[jac(bogus)]
   |               ^^^^^
